--- a/audioVideo.html
+++ b/audioVideo.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <audio controls muted src="./assets/Padi Padi Leche Manasu Movie Bgm.mp3">Audio</audio>
+    <audio controls muted src="./assets/Sample Audio.mp3">Audio</audio>
     <video controls muted src="./assets/Sample Video.mp4"></video>
 </body>
 </html>
