--- a/BlockLevelEle.html
+++ b/BlockLevelEle.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Sample.css">
 </head>
 <body>
+    <!-- Block Level Elements  -->
+    <h1 display="Inline">Welcome</h1>
+    <!-- Inline Elements -->
+    <a style="background-color: blue;"  href="">link1</a>
+    <a style="background-color: brown;"  href="">link2</a>
+    <!-- Inline Block Elements -->
+     <img src="./assets/sample image.jpg" alt="Image" width="200px" height="200px">
     <div class="box">
-        
+        <h1>Java</h1>
+
     </div>
-    <h1>Welcome</h1>
+    
 </body>
 </html>
