--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to Html</h1>
     <a href="./audioVideo.html">Audio/Video</a>
+    <a href="./Forms2.html">Signup Page </a>
 </body>
 </html>
